--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Cpac Systems AB:Cpac APIs 28:28'
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "se.cpacsystems.digassist.test"
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation project(':DigAssistLibrary')
+    implementation 'se.cpacsystems.digassist:digassist:0.0.1'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
